// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`console > function fatal("just message") > ansi 1`] = `
"

 ERROR  just message


"
`;

exports[`console > function fatal("just message") > colors 1`] = `
"

 ERROR  just message


"
`;

exports[`console > function fatal("message with array-diff") > ansi 1`] = `
"

 ERROR  message with array-diff

Expected:

[
  1,
  2,
  3
]
Received:

[
  1,
  2,
  4
]
Difference:

 [
   ...
   ...
-  3
+  4
 ]

"
`;

exports[`console > function fatal("message with array-diff") > colors 1`] = `
"

 ERROR  message with array-diff

Expected:

[
  1,
  2,
  3
]
Received:

[
  1,
  2,
  4
]
Difference:

 [
   ...
   ...
[31m-  3[39m
[32m+  4[39m
 ]

"
`;

exports[`console > function fatal("message with buffer-diff") > ansi 1`] = `
"

 ERROR  message with buffer-diff

Difference:

 {
-  0: 49
+  0: 52
-  1: 50
+  1: 53
-  2: 51
+  2: 54
 }

"
`;

exports[`console > function fatal("message with buffer-diff") > colors 1`] = `
"

 ERROR  message with buffer-diff

Difference:

 {
[31m-  0: 49[39m
[32m+  0: 52[39m
[31m-  1: 50[39m
[32m+  1: 53[39m
[31m-  2: 51[39m
[32m+  2: 54[39m
 }

"
`;

exports[`console > function fatal("message with details") > ansi 1`] = `
"

 ERROR  message with details

Details:

123

"
`;

exports[`console > function fatal("message with details") > colors 1`] = `
"

 ERROR  message with details

Details:

123

"
`;

exports[`console > function fatal("message with diff and details") > ansi 1`] = `
"

 ERROR  message with diff and details

Expected:

[
  1
]
Received:

[
  2
]
a:

1
b:

2
Difference:

 [
-  1
+  2
 ]

"
`;

exports[`console > function fatal("message with diff and details") > colors 1`] = `
"

 ERROR  message with diff and details

Expected:

[
  1
]
Received:

[
  2
]
a:

1
b:

2
Difference:

 [
[31m-  1[39m
[32m+  2[39m
 ]

"
`;
